--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi segunda pagina de internet</title>
+    <title>Proyectos de Luis</title>
 </head>
+
 <body>
-    
+    <main>
+
+        <h1>Mis Proyectos</h1>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="./Portafolio/">Portafolio</a>
+                </li>
+            </ul>
+        </nav>
+
+    </main>
+
+    <footer>
+        <ul>
+            
+        </ul>
+
+    </footer>
 </body>
+
 </html>
